# NiukeProblem

./: ByteAlignment.cpp  Question.cpp  Questions.cpp  README.md  Singleton.cpp  singleton_summery.txt
Base64/: Base64.cpp  Base64Decoded.txt  GetDataFromUrl.cpp  base64.txt  getContent.py
Factory/: AbstractFactory.cpp  FactoryMethod.cpp  StaticFactoryMethod.cpp  factory_summery.txt
Singleton/: singleton_summery.txt
cmake/: CMakeLists.txt
cmake/src/: CMakeLists.txt  HelloWorld.cpp
issues/: Questions.cpp
leetCodeProblems/: 1.two-sum.cpp  2.add-two-numbers.cpp  3.longest-substring-without-repeating-characters.cpp  Test.cpp
markdown/: learnMarkdown.md
thread/: CMakeLists.txt  Mutex_01.cpp  Mutex_02.cpp  Mutex_03.cpp
